# git-brancher-tui

./: CLAUDE.md  Cargo.toml  PLAN.md  README.md  milestones.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
src/: actions.rs  app.rs  index.ts  input.rs  main.rs  update.rs
src/cli/: clone.ts  profile.ts
src/cli/branch/: actions.ts  index.ts  read.ts
src/commands/: clone.ts  config.ts  init.ts  log.ts
src/commands/branch/: clean.ts  diff.ts  list.ts  open.ts  prune.ts  pull.ts  reclone.ts  status.ts
src/commands/profile/: copy.ts  create.ts  delete.ts  diff.ts  doctor.ts  edit.ts  export.ts  import.ts  list.ts  rename.ts  show.ts
src/lib/: age.ts  audit.ts  banner.ts  doctor-checks.ts  editor.ts  errors.ts  format.ts  gitrc.ts  hooks.ts  paths.ts  reachability.ts  templates.ts  types.ts
src/lib/branch/: index.ts  ops.ts
src/lib/clone/: index.ts  inject.ts
src/lib/profile/: diff.ts  index.ts  io.ts  prompts.ts
src/ops/: audit.rs  branch.rs  clone.rs  config.rs  doctor.rs  git.rs  mod.rs  profile.rs
src/state/: config.rs  data.rs  mod.rs  screen.rs
src/ui/: layout.rs  mod.rs
src/ui/screens/: audit_log.rs  config_screen.rs  dashboard.rs  first_run.rs  mod.rs  profile_create.rs  profile_detail.rs  profile_doctor.rs  profile_list.rs  stub.rs
src/ui/widgets/: form.rs  mod.rs  status_bar.rs
src/util/: age.rs  editor.rs  format.rs  mod.rs  paths.rs
