[package]
name = "git-brancher-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gbr"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
tar = "0.4"
futures = "0.3"
